Adding upcoming event.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <h1>Exhibitions & Events</h1>
 
 <p></p><ul type='disc'>
+<li>Group exhibition, <a href="https://www.alphenartevent.nl">Alphen Art Event</a>, De Werf, Alphen aan den Rijn, june 13th - 15th, 2025</li>
 <li>Group exhibition, <a href="https://www.stichtingalphenart.nl/michiel-kauw-a-tjoe/expositieperiode-82/">Galerie STAA</a>, Aarhof 41, Aarkade, Alphen aan den Rijn, februari 13th - March 20th, 2025</li>
 <li>Solo exhibition, <a href="https://www.bibliotheekrijnenvenen.nl/activiteiten/exposities/expositiesoverzicht/MichielKauw-A-Tjoe.html">Bibliotheek Rijn & Venen (Centrum)</a>, Aarkade 10, Alphen aan den Rijn, April 19th - May 17th, 2024</li>
 <li>Solo exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, Alphen aan den Rijn, January 28th - March 24th, 2022</li>
