--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <p><ul type='disc'>
 <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
-<li><a href="https://www.behance.net/michielkauwatjoe">Behance</a></li>
+<li><a href="https://michielkauwatjoe.myportfolio.com/">Portfolio</a></li>
 <li><a href="https://michielkauwatjoe.bigcartel.com">Big Cartel</a></li>
 </ul></p>
 
