Removing logo link.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <section id="header">
 <div id="headercontent">
-    <div id="logo"><a href="/"><br/></div>
+    <div id="logo"></div>
 </div>
 </section>
 
@@ -38,8 +38,6 @@
 
 <section id="content">
 <div class="contentcenter">
-
-
 
 <h1>Art</h1>
 
