Updating sound links.

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 <h1>Music</h1>
 
 <p><ul type='disc'>
-<li><a href="https://clearwaterbay.bandcamp.com">BandCamp</a></li>
+<li><a href="https://impuseresponse.bandcamp.com">BandCamp</a></li>
 <li><a href="https://music.apple.com/us/artist/impulse-response/1782476822">Apple Music</a></li>
-<li><a href="https://soundcloud.com/michielkauwatjoe">SoundCloud</a></li>
+<li><a href="https://soundcloud.com/impuse_response_music">SoundCloud</a></li>
 <li><a href="https://open.spotify.com/artist/26sALTKu9R0G4xwdOGmvIM">Spotify</a></li>
 <li><a href="https://music.youtube.com/channel/UCc7hEVrgS1P9Xi5qpnV4-Cw">YT Music</a></li>
-<li><a href="https://www.mixcloud.com/michielkauwatjoe">MixCloud</a></li>
+<li><a href="https://www.mixcloud.com/clearwaterbaybroadcasting">MixCloud</a></li>
 </ul></p>
 
 <h1>Exhibitions & Events</h1>
