--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <h1>Music</h1>
 
 <p><ul type='disc'>
-<li><a href="https://impuseresponse.bandcamp.com">BandCamp</a></li>
+<li><a href="https://impulseresponse.bandcamp.com">BandCamp</a></li>
 <li><a href="https://music.apple.com/us/artist/impulse-response/1782476822">Apple Music</a></li>
 <li><a href="https://soundcloud.com/impuse_response_music">SoundCloud</a></li>
 <li><a href="https://open.spotify.com/artist/26sALTKu9R0G4xwdOGmvIM">Spotify</a></li>
