--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
 <li><a href="https://michielkauwatjoe.myportfolio.com/">Portfolio</a></li>
 <li><a href="https://michielkauwatjoe.bigcartel.com">Big Cartel</a></li>
+<li><a href="https://tiktok.com/@michielkauwatjoe">TikTok</a></li>
 </ul></p>
 
 <h1>Music</h1>
