--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <li><a href="https://soundcloud.com/impulse_response_music">SoundCloud</a></li>
 <li><a href="https://open.spotify.com/artist/26sALTKu9R0G4xwdOGmvIM">Spotify</a></li>
 <li><a href="https://music.youtube.com/channel/UCc7hEVrgS1P9Xi5qpnV4-Cw">YT Music</a></li>
-<li><a href="https://modulargrid.net/e/racks/view/2491277">ModularGrid"</a></li>
+<li><a href="https://modulargrid.net/e/racks/view/2491277">ModularGrid</a></li>
 <li><a href="https://www.mixcloud.com/clearwaterbaybroadcasting">MixCloud</a></li>
 </ul></p>
 
